added policy iteration pseudo code

--- a/MDP_policy_iteration.ipynb
+++ b/MDP_policy_iteration.ipynb
@@ -18,6 +18,42 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "Df11i1gDz564"
+      },
+      "source": [
+        "Procedure Policy_Iteration(S,A,P,R)\n",
+        "          Inputs\n",
+        "                    S :set of all states\n",
+        "                    A :set of all actions\n",
+        "                    P :state transition function: P(s'|s,a)\n",
+        "                    R :the reward function R(s,a,s')\n",
+        "          Output\n",
+        "                    optimal policy p\n",
+        "          Local\n",
+        "                    action array p[S]\n",
+        "                    Boolean variable noChange\n",
+        "                    real array V[S]\n",
+        "          set p arbitrarily\n",
+        "          repeat\n",
+        "                    noChange ←true\n",
+        "                    Solve V[s] = ∑s'∈S P(s'|s,p[s])(R(s,a,s')+γV[s'])\n",
+        "                    for each s∈S do\n",
+        "                              Let QBest=V[s]\n",
+        "                              for each a ∈A do\n",
+        "                                        Let Qsa=∑s'∈S P(s'|s,a)(R(s,a,s')+γV[s'])\n",
+        "                                        if (Qsa > QBest) then\n",
+        "                                                  p[s]←a\n",
+        "                                                  QBest ←Qsa\n",
+        "                                                  noChange ←false\n",
+        "          until noChange\n",
+        "          return p"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
@@ -25,6 +61,8 @@
         "outputId": "819f24bc-8bfe-4d39-8af3-d610a785725e"
       },
       "source": [
+        "\n",
+        "\n",
         "import numpy as np\n",
         "\n",
         "\n",
@@ -80,7 +118,7 @@
         "print(policy)\n",
         "print(V)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
