edited pseudo code

--- a/MDP_policy_iteration.ipynb
+++ b/MDP_policy_iteration.ipynb
@@ -29,22 +29,19 @@
         "                    R :the reward function R(s,a,s')\n",
         "          Output\n",
         "                    optimal policy p\n",
-        "          Local\n",
-        "                    action array p[S]\n",
-        "                    Boolean variable noChange\n",
-        "                    real array V[S]\n",
+        "          
         "          set p arbitrarily\n",
         "          repeat\n",
-        "                    noChange ←true\n",
-        "                    Solve V[s] = ∑s'∈S P(s'|s,p[s])(R(s,a,s')+γV[s'])\n",
+        "                    noChange = true\n",
+        "                    Solve V[s] = sum over s'∈ S P(s'|s,p[s])(R(s,a,s')+γV[s'])\n",
         "                    for each s∈S do\n",
-        "                              Let QBest=V[s]\n",
-        "                              for each a ∈A do\n",
-        "                                        Let Qsa=∑s'∈S P(s'|s,a)(R(s,a,s')+γV[s'])\n",
+        "                              Let QBest= V[s]\n",
+        "                              for each a ∈ A do\n",
+        "                                        Let Qsa=sum over s'∈ S P(s'|s,a)(R(s,a,s')+γV[s'])\n",
         "                                        if (Qsa > QBest) then\n",
-        "                                                  p[s]←a\n",
-        "                                                  QBest ←Qsa\n",
-        "                                                  noChange ←false\n",
+        "                                                  p[s]= a\n",
+        "                                                  QBest = Qsa\n",
+        "                                                  noChange = false\n",
         "          until noChange\n",
         "          return p"
       ],
